--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<distributionManagement>
 		<repository>
 				<id>nexus</id>
-				<url>http://158.160.166.67:8081/repository/maven-releases</url>
+				<url>http://nexus-01:8081/repository/maven-releases</url>
 		</repository>
 	</distributionManagement>
 	<dependencies>
